[package]
name = "poker-face"
version = "0.1.0"
edition = "2021"
description = "A hand evaluator for Texas Hold'em poker, using the Rust Match control flow construct."
repository = "https://github.com/davassi/poker-face"
homepage = "https://github.com/davassi/poker-face"
license = "MIT OR Apache-2.0"
authors = ["Davassi <gianluigi.davassi@gmail.com>"]
categories = ["command-line-interface","games","game development"]
readme = "README.md"
keywords = [
  "poker",
  "math",
  "evaluator",
  "game",
  "cards",
]
exclude = [
    ".github/workflows/rust.yml",
]

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
rustyline = "12.0.0"
log = "0.4"
env_logger = "0.10.0"
anyhow = "1.0.72"
thiserror = "1.0.44"
lazy_static = "1.4"
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.2"

[profile.release]
opt-level = 3
debug = true

[[bin]]
name = "pokerface"
path = "src/bin/main.rs"

[lib]
name = "pokerface"
